--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="level_four/eighteen/index.html">eighteen</a>
           <a href="level_four/nineteen/index.html">nineteen</a>
           <a href="level_four/twenty/index.html">twenty</a>
-          
+          <a href="https://www.instagram.com/ashleyluciano5063">Image journal</a>
 </p>
     </body>
 </html>
