--- a/level_four/eighteen/index.html
+++ b/level_four/eighteen/index.html
@@ -5,40 +5,41 @@
                 <link rel="stylesheet" href="css/main.css" type="text/css" />
         </head>
             <body>
-                <div class=title><strong>I Like For You To Be Still </strong>
-                    <br>by Paublo Neruda</div>
-<div class=one>I like for you to be still<br>
+                <div class=title><strong>I Like For You To Be Still</strong><br>by Paublo Neruda</div>
+                <div class=one>I like for you to be <b>still</b><br>
 It is as though you are absent<br>
 And you hear me from far away<br>
-And my voice does not touch you<br>
+And my voice does not touch <i>you</i><br>
 It seems as though your eyes had flown away<br>
 And it seems that a kiss had sealed your mouth<br>
 As all things are filled with my soul<br>
-You emerge from the things<br>
+<i>You</i> emerge from the things<br>
 Filled with my soul<br>
-You are like my soul<br>
+<i>You</i> are like my soul<br>
 A butterfly of dream<br>
-    And you are like the word:<br> Melancholy</div>
+    And <i>you</i> are like the word:<br> Melancholy</div>
+<br>
 
-<div class=two>I like for you to be still<br>
-And you seem far away<br>
-It sounds as though you are lamenting<br>
+<div class=two>I like for <i>you</i> to be <b>still</b><br>
+And <i>you</i> seem far away<br>
+It sounds as though <i>you</i> are lamenting<br>
 A butterfly cooing like a dove<br>
-And you hear me from far away<br>
-And my voice does not reach you<br>
+And <i>you</i> hear me from far away<br>
+And my voice does not reach <i>you</i><br>
 Let me come to be still in your silence<br>
 And let me talk to you with your silence<br>
 That is bright as a lamp<br>
 Simple, as a ring<br>
-You are like the night<br>
+<i>You</i> are like the night<br>
 With its stillness and constellations<br>
 Your silence is that of a star<br>
     As remote and candid</div>
+<br>
 
-<div class=three>I like for you to be still<br>
-It is as though you are absent<br>
+<div class=three>I like for <i>you</i> to be <b>still</b><br>
+It is as though <i>you</i> are absent<br>
 Distant and full of sorrow<br>
-So you would've died<br>
+So <i>you</i> would've died<br>
 One word then, One smile is enough<br>
 And I'm happy;<br>
     Happy that it's not true</div>
