--- a/level_four/twenty/index.html
+++ b/level_four/twenty/index.html
@@ -7,40 +7,40 @@
             <body>
                 <div class=title><strong>I Like For You To Be Still </strong>
                     <br>by Paublo Neruda</div>
-<div class=one>I like for you to be still<br>
-It is as though you are absent<br>
-And you hear me from far away<br>
-And my voice does not touch you<br>
-It seems as though your eyes had flown away<br>
-And it seems that a kiss had sealed your mouth<br>
-As all things are filled with my soul<br>
-You emerge from the things<br>
-Filled with my soul<br>
-You are like my soul<br>
-A butterfly of dream<br>
-    And you are like the word:<br> Melancholy</div>
+<div class=one>I like for you to be still
+It is as though you are absent
+And you hear me from far away
+And my voice does not touch you
+It seems as though your eyes had flown away
+And it seems that a kiss had sealed your mouth
+As all things are filled with my soul
+You emerge from the things
+Filled with my soul
+You are like my soul
+A butterfly of dream
+And you are like the word:<br> Melancholy</div>
 
-<div class=two>I like for you to be still<br>
-And you seem far away<br>
-It sounds as though you are lamenting<br>
-A butterfly cooing like a dove<br>
-And you hear me from far away<br>
-And my voice does not reach you<br>
-Let me come to be still in your silence<br>
-And let me talk to you with your silence<br>
-That is bright as a lamp<br>
-Simple, as a ring<br>
-You are like the night<br>
-With its stillness and constellations<br>
-Your silence is that of a star<br>
+<div class=two>I like for you to be still
+And you seem far away
+It sounds as though you are lamenting
+A butterfly cooing like a dove
+And you hear me from far away
+And my voice does not reach you
+Let me come to be still in your silence
+And let me talk to you with your silence
+That is bright as a lamp
+Simple, as a ring
+You are like the night
+With its stillness and constellations
+Your silence is that of a star
     As remote and candid</div>
 
-<div class=three>I like for you to be still<br>
-It is as though you are absent<br>
-Distant and full of sorrow<br>
-So you would've died<br>
-One word then, One smile is enough<br>
-And I'm happy;<br>
+<div class=three>I like for you to be still
+It is as though you are absent
+Distant and full of sorrow
+So you would've died
+One word then, One smile is enough
+And I'm happy;
     Happy that it's not true</div>
             </body>
     </html>
