--- a/index.html
+++ b/index.html
@@ -2,32 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <title>Hello World</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-      <p>
-          <a href="level_one/one.html">one</a>
-          <a href="level_one/two.html">two</a>
-          <a href="level_one/three.html">three</a>
-          <a href="level_one/four.html">four</a>
-          <a href="level_one/five.html">five</a>
-          <a href="level_two/six.html">six</a>
-          <a href="level_two/seven.html">seven</a>
-          <a href="level_two/eight.html">eight</a>
-          <a href="level_two/nine.html">nine</a>
-          <a href="level_two/ten.html">ten</a>
-          <a href="level_three/eleven/index.html">eleveen</a>
-          <a href="level_three/twelve/index.html">twelve</a>
-          <a href="level_three/thirteen/index.html">thirteen</a>
-          <a href="level_three/fourteen/index.html">fourteen</a>
-          <a href="level_three/fifteen/index.html">fifteen</a>
-          <a href="level_four/sixteen/index.html">sixteen</a>
-          <a href="level_four/seventeen/index.html">seventeen</a>
-          <a href="level_four/eighteen/index.html">eighteen</a>
-          <a href="level_four/nineteen/index.html">nineteen</a>
-          <a href="level_four/twenty/index.html">twenty</a>
-          <a href="https://www.instagram.com/ashleyluciano5063">Image journal</a>
-</p>
+    <h1>25 Variations</h1>
+          <div class="vertical-menu">
+          <a href="level_one/one.html" class="hvr-shutter-in-horizontal">One</a>
+          <a href="level_one/two.html" class="hvr-shutter-in-horizontal">Two</a>
+          <a href="level_one/three.html" class="hvr-shutter-in-horizontal">Three</a>
+          <a href="level_one/four.html" class="hvr-shutter-in-horizontal">Four</a>
+          <a href="level_one/five.html" class="hvr-shutter-in-horizontal">Five</a>
+          <a href="level_two/six.html" class="hvr-shutter-in-horizontal">Six</a>
+          <a href="level_two/seven.html" class="hvr-shutter-in-horizontal">Seven</a>
+          <a href="level_two/eight.html" class="hvr-shutter-in-horizontal">Eight</a>
+          <a href="level_two/nine.html" class="hvr-shutter-in-horizontal">Nine</a>
+          <a href="level_two/ten.html" class="hvr-shutter-in-horizontal">Ten</a>
+          <a href="level_three/eleven/index.html" class="hvr-shutter-in-horizontal">Eleveen</a>
+          <a href="level_three/twelve/index.html" class="hvr-shutter-in-horizontal">Twelve</a>
+          <a href="level_three/thirteen/index.html" class="hvr-shutter-in-horizontal">Thirteen</a>
+          <a href="level_three/fourteen/index.html" class="hvr-shutter-in-horizontal">Fourteen</a>
+          <a href="level_three/fifteen/index.html" class="hvr-shutter-in-horizontal">Fifteen</a>
+          <a href="level_four/sixteen/index.html" class="hvr-shutter-in-horizontal">Sixteen</a>
+          <a href="level_four/seventeen/index.html" class="hvr-shutter-in-horizontal">Seventeen</a>
+          <a href="level_four/eighteen/index.html" class="hvr-shutter-in-horizontal">Eighteen</a>
+          <a href="level_four/nineteen/index.html" class="hvr-shutter-in-horizontal">Nineteen</a>
+          <a href="level_four/twenty/index.html" class="hvr-shutter-in-horizontal">Twenty</a>
+          <a href="level_five/twenty_one/index.html" class="hvr-shutter-in-horizontal">Twenty one</a>
+          <a href="level_five/twenty_two/index.html" class="hvr-shutter-in-horizontal">Twenty two</a>
+          <a href="level_five/twenty_three/index.html" class="hvr-shutter-in-horizontal">Twenty three</a>
+          <a href="level_five/twenty_four/index.html" class="hvr-shutter-in-horizontal">Twenty four</a>
+          <a href="level_five/twenty_five/index.html" class="hvr-shutter-in-horizontal">Twenty five</a>
+          <a href="https://www.instagram.com/ashleyluciano5063" class="hvr-shutter-in-horizontal">Image journal</a>
+          </div>
     </body>
 </html>
