--- a/level_two/six.html
+++ b/level_two/six.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Poem6</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>Poem1</title>
+    <div class="vertical-menu">
+          <a href="../index.html" class="hvr-shutter-in-horizontal">Home</a>
+          </div>
     <style>
       #container{
         width:1000px;
