--- a/level_five/twenty_two/index.html
+++ b/level_five/twenty_two/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../style.css"/>
+    <title>Poem1</title>
+    <div class="vertical-menu">
+          <a href="../../index.html" class="hvr-shutter-in-horizontal">Home</a>
+          </div>
+      <br>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript" src="script_a.js"></script>
         </head>
             <body>
                 <div class=title><strong>I Like For You To Be Still </strong>
                     <br>by Paublo Neruda</div>
+                <div class=red1></div>
+                <div class=red2></div>
+                <div class=red3></div>
 <div class=one>I like for you to be still<br>
 It is as though you are absent<br>
 And you hear me from far away<br>
