--- a/level_four/seventeen/index.html
+++ b/level_four/seventeen/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <title>seventeen</title>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../style.css"/>
+    <title>Poem1</title>
+    <div class="vertical-menu">
+          <a href="../../index.html" class="hvr-shutter-in-horizontal">Home</a>
+          </div>
+      <br>
                 <link rel="stylesheet" href="css/main.css" type="text/css" />
         </head>
             <body>
