--- a/level_one/four.html
+++ b/level_one/four.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Poem4</title>
-  </head>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>Poem1</title>
+    <div class="vertical-menu">
+          <a href="../index.html" class="hvr-shutter-in-horizontal">Home</a>
+          </div>
+    </head>
   <body>
 <p> I Like For You To Be Still - Poem by Pablo Neruda</p>
 
