--- a/level_one/one.html
+++ b/level_one/one.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>Poem1</title>
-  </head>
+    <div class="vertical-menu">
+          <a href="../index.html" class="hvr-shutter-in-horizontal">Home</a>
+          </div>
+    </head>
   <body>
 
 <p>
