--- a/level_three/twelve/index.html
+++ b/level_three/twelve/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <title>twelve</title>
-                <link rel="stylesheet" href="css/main.css" type="text/css" />
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../style.css"/>
+    <title>Poem1</title>
+    <div class="vertical-menu">
+          <a href="../../index.html" class="hvr-shutter-in-horizontal">Home</a>
+          </div>
+      <br>
+      <link rel="stylesheet" href="css/main.css" type="text/css" />
         </head>
             <body>
                 <div class=title><strong>I Like For You To Be Still </strong>
