--- a/25_variations/level_five/twenty_one/index.html
+++ b/25_variations/level_five/twenty_one/index.html
@@ -13,12 +13,11 @@
         <script type="text/javascript" src="script_a.js"></script>
         </head>
             <body>
-                <div class=title><strong>I Like For You To Be Still </strong>
+                <div class="title"><strong>I Like For You To Be Still </strong>
                     <br>by Paublo Neruda</div>
-                <div class=red1></div>
-                <div class=red2></div>
-                <div class=red3></div>
-<div class=one>I like for you to be still<br>
+                <br><br>
+
+<div class="one">I like for you to be still<br>
 It is as though you are absent<br>
 And you hear me from far away<br>
 And my voice does not touch you<br>
@@ -31,7 +30,7 @@ You are like my soul<br>
 A butterfly of dream<br>
     And you are like the word:<br> Melancholy</div>
 
-<div class=two>I like for you to be still<br>
+<div class="two">I like for you to be still<br>
 And you seem far away<br>
 It sounds as though you are lamenting<br>
 A butterfly cooing like a dove<br>
@@ -46,7 +45,7 @@ With its stillness and constellations<br>
 Your silence is that of a star<br>
     As remote and candid</div>
 
-<div class=three>I like for you to be still<br>
+<div class="three">I like for you to be still<br>
 It is as though you are absent<br>
 Distant and full of sorrow<br>
 So you would've died<br>
