--- a/25_variations/level_five/twenty_three/index.html
+++ b/25_variations/level_five/twenty_three/index.html
@@ -13,10 +13,9 @@
         <script type="text/javascript" src="script_a.js"></script>
         </head>
             <body>
-                <div class=title><strong>I Like For You To Be Still </strong>
+                <div class="title"><strong>I Like For You To Be Still </strong>
                     <br>by Paublo Neruda</div>
-                <br><br>
-
+                
 <div class=one>I like for you to be still<br>
 It is as though you are absent<br>
 And you hear me from far away<br>
