--- a/25_variations/level_five/twenty_two/index.html
+++ b/25_variations/level_five/twenty_two/index.html
@@ -15,9 +15,9 @@
             <body>
                 <div class=title><strong>I Like For You To Be Still </strong>
                     <br>by Paublo Neruda</div>
-                <div class=red1></div>
-                <div class=red2></div>
-                <div class=red3></div>
+                <div class="red1"></div>
+                <div class="red2"></div>
+                <div class="red3"></div>
 <div class=one>I like for you to be still<br>
 It is as though you are absent<br>
 And you hear me from far away<br>
