--- a/event_microsite/index.html
+++ b/event_microsite/index.html
@@ -19,5 +19,8 @@ window.alert("Big Brother is ALWAYS watching");
       This is not an invitation, your presence is mandatory.<br>
           Failure to cooperate will be seen with punishment.</div>
       <div class=info2>"The party told you to reject the evidence of your eyes and ears. It was their final, most essential command. His heart sank as he thought of the enormous power arrayed against him, the ease with which any Party intellectual would overthrow him in debate, the subtle arguments which he would not be able to understand, much less answer. And yet he was in the right! They were wrong and he was right. "</div>
+      <div class=info3>When: in _____ : ______ hrs<br>
+      Where:(gps location)
+      </div>
   </body>
   </html>
