--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <ol>
       <li><a href="25_variations/index.html">25 Variations</a></li>
       <li><a href="https://www.instagram.com/ashleyluciano5063">Project Journal</a></li>
-      <li><a href="">Event Microsite</a></li>
+      <li><a href="event_microsite/index.html">Event Microsite</a></li>
       </ol>
 <p>Class exercises</p>
       <ol>
@@ -18,6 +18,8 @@
       <li><a href="jquery/index.html">Jquery</a></li>
       <li><a href="">Hover States</a></li>
       <li><a href="responsive_page/index.html">Responsive Page</a></li>
+      <li><a href="sentence_generator/index.html">Sentence Generator 1</a></li>
+      <li><a href="sentence_generator/index2.html">Sentence Generator 2</a></li>
       </ol>
   </body>
   </html>
