--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <ol>
       <li><a href="25_variations/index.html">25 Variations</a></li>
       <li><a href="https://www.instagram.com/ashleyluciano5063">Project Journal</a></li>
-      <li><a href="event_microsite/index.html">Event Microsite</a></li>
+      <li><a href="event_microsite/indextwo.html">Event Microsite</a></li>
       </ol>
 <p>Class exercises</p>
       <ol>
