--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <body>
   <p>Class assignments</p>
       <ol>
+      <li><a href="https://www.instagram.com/ashleyluciano5063/">Image journal</a></li>
+      <li><a href="https://www.quora.com/profile/Sancho-Panza-16">Republish a Text</a></li>
       <li><a href="25_variations/index.html">25 Variations</a></li>
-      <li><a href="https://www.instagram.com/ashleyluciano5063">Project Journal</a></li>
       <li><a href="event_microsite/indextwo.html">Event Microsite</a></li>
+      <li><a href="catalog/index.html">Catalog</a></li>
+      
       </ol>
 <p>Class exercises</p>
       <ol>
@@ -20,6 +23,10 @@
       <li><a href="responsive_page/index.html">Responsive Page</a></li>
       <li><a href="sentence_generator/index.html">Sentence Generator 1</a></li>
       <li><a href="sentence_generator/index2.html">Sentence Generator 2</a></li>
+      <li><a href="abstract_grid/">Abstract Grid</a></li>
+      <li><a href="image/idex.html">Image Inspiration</a></li>
       </ol>
+      
+
   </body>
   </html>
